--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".App"
@@ -26,6 +27,10 @@
             android:exported="false" />
         <service
             android:name=".appservices.PicturesDownloaderService"
+            android:exported="false" />
+
+        <service
+            android:name=".appservices.LocalDataHandlerService"
             android:exported="false" />
     </application>
 
